--- a/components/xeiob4yg3-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/xeiob4yg3-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: xeiob4yg3-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-3b7444e443.t3a5.p3.openshiftapps.com/rhtap/rhtap-qe:daed7c56889b7cb3e48f2bd108c219f14815239b@sha256:f198d9536755370ddcc94059db5d429dae374adaa4798e09f652395822535132
+          name: container-image
